--- a/PsuAngularNetCore2/AngularNetCore2.csproj
+++ b/PsuAngularNetCore2/AngularNetCore2.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\PsuApi.csproj" />
+    <ProjectReference Include="..\PsuApi\PsuApi.csproj" />
   </ItemGroup>
 
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
