--- a/PsuApi.Tests/PsuApi.Tests.csproj
+++ b/PsuApi.Tests/PsuApi.Tests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
+    <PackageReference Include="Moq" Version="4.7.99" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.1.18" />
     <PackageReference Include="MSTest.TestFramework" Version="1.1.18" />
   </ItemGroup>
@@ -21,6 +22,18 @@
   <ItemGroup>
     <ProjectReference Include="..\PsuAngularNetCore2\AngularNetCore2.csproj" />
     <ProjectReference Include="..\PsuApi\PsuApi.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="PennStateControllerTest.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="SampleData\ShortReturn.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
